# ANAS522

./: DEPLOY_RENDER.md  README.md  engine.py  pyproject.toml  requirements.txt
frontend/: app.js  chart.js  datafeed.js  editor.js  index.html  indicators.js  style.css
frontend/login/: login.css  login.html  login.js
quotex/: bot.py  candles_cache.db  credentials.json  diagnose.py  requirements.txt  server.py  session.json  start.sh  تشغيل.bat
quotex/static/: index.html
