[project]
name = "qxchart"
version = "0.1.0"
description = "Modern trading UI system with real-time charts, indicators, and editor execution engine."
authors = [
    { name = "qxzero1", email = "sbabi5625@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "websocket-client (>=1.8.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "fake-useragent (==2.2.0)",
    "certifi (>=2024.2.2)",
    "orjson (>=3.9.0,<4.0.0)"
]

[tool.poetry.dependencies]
numpy = { version = "^2.2.3", markers = "platform_machine != 'aarch64' and platform_machine != 'armv7l'" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
